# reproducer-jetbrains-bazel-fork

./: .bazelrc  .gitignore  BUILD.bazel  Consumer.java  CreateFile.java  MODULE.bazel  README.md  reproduce.cmd  rule.bzl
